--- a/templates/home.html
+++ b/templates/home.html
@@ -44,7 +44,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Departure Date</h5>
                             <!-- Departure -->
-                            <input type="datetime-local" name="Dep_Time" id="Dep_Time" required="required">
+                            <input type="date" name="Dep_Time" id="Dep_Time" required="required">
                         </div>
                     </div>
                 </div>
@@ -56,7 +56,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Arrival Date</h5>
                             <!-- Arrival -->
-                            <input type="datetime-local" name="Arrival_Time" id="Arrival_Time" required="required">
+                            <input type="date" name="Arrival_Time" id="Arrival_Time" required="required">
                         </div>
                     </div>
                 </div>
